# ai

./: main.py  pyproject.toml
.github/: renovate.json
agent/: MCP_IMPLEMENTATION.md  chatbot.py  chatbot_mcp.py  ingest_database.py  mcp_knowledge_server.py  test_setup.py
barebones/: chatbot.py  ingest_database.py
chatbot/agent/: MCP_README.md  PRD.md  README.md  SUMMARY.md  chatbot_static_tools.py  ingest_database.py
chatbot/barebones/: chatbot.py
chatbot/chromadb/: chroma.sqlite3
chromadb/: chroma.sqlite3
docs/superpowers/plans/: 2026-06-19-zumba-admin-ui-phase2-and-bot-test.md
docs/superpowers/specs/: 2026-06-19-zumba-admin-ui-phase2-and-bot-test-design.md  2026-06-25-bot-trace-observability-design.md
n8n/: .gitignore  CLAUDE.md  absagen.sql  admin-web-ui.md  dev-local.sh  docker-compose.yml  query.sql  run-local.sh  statistic.js  system-prompt.txt
n8n/.github/: renovate.json
n8n/.opencode/: opencode.json
n8n/deployment/: Chart.yaml  DEPLOYMENT.md  README.md  switch-webhook.sh
n8n/deployment/argocd/: README.md  applicationset.yaml  argocd-app.yaml
n8n/whatsapp-bot/: .air.toml  .env.example  .gitignore  Dockerfile  Makefile  README.md  TESTING.md  go.mod
n8n/whatsapp-statistic/: dashboard.js  rpg.js
n8n/wrapped/: Dockerfile  Makefile  PRD.md  README.md  app.js  data.js  docker-compose.yml  go.mod  go.sum  index.html
n8n/zumba-admin-ui/: .air.toml  .env.example  .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum
tool_updater/: PRD.md  graph.mmd  main.py  pyproject.toml
tool_updater/.github/: copilot-instructions.md
(+166 files in other folders)
