[project]
name = "tool-updater"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=1.0.1",
    "langchain-core>=0.3.0",
    "tavily-python>=0.5.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "python-dotenv>=1.1.1",
    "langchain-community>=0.4",
    "langchain-ollama>=1.0.0",
    "pydantic>=2.12.3",
]
